--- a/myApp/src/app/partofpage/editfield/editfield.page.html
+++ b/myApp/src/app/partofpage/editfield/editfield.page.html
@@ -1,24 +1,26 @@
-<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
-<ion-header class="background" style="font-family: 'Sriracha', cursive;">
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<ion-header class="background" style="font-family: 'Sarabun', sans-serif;">
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title  style="font-family: 'Sriracha', cursive;">แก้ไขข้อมูลสนาม</ion-title>
+    <ion-title  style="font-family: 'Sarabun', sans-serif;">แก้ไขข้อมูลสนาม</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background" style="font-family: 'Sriracha', cursive;">
+<ion-content class="background" style="font-family: 'Sarabun', sans-serif;">
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/noimage.png" class="rounded" alt="...">
   </div>
 
-  <div>
-    <ion-button class="centeredit"(click)="selectImage()">แก้รูปภาพใหม่</ion-button>
+  <div  class="centerbutton">
+    <button type="button" (click)="selectImage()" class="btn btn-link"><ion-icon name="camera-outline"></ion-icon>เพิ่มรูปภาพ</button>
   </div>
+  <div class="padding">
+  <label>ชื่อสนาม</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1">ชื่อสนาม</span>
     </div>
     <input type="text" class="form-control" value="สนามที่ 1  " aria-label="Username" aria-describedby="basic-addon1">
   </div>
@@ -44,10 +46,9 @@
       </option>
     </select>
   </div>
-
+  <label>ราคาสนาม</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon5">ราคาสนาม</span>
     </div>
     <input type="text" class="form-control" value="600" aria-label="Username" aria-describedby="basic-addon1">
   </div>
@@ -61,7 +62,6 @@
 
   <div class="centerbutton">
     <button type="button" (click)="presentAlertConfirm()" class="btn btn-success ">แก้ไขข้อมูลสนาม</button>
-    <button type="button"  (click)="goAccount()" class="btn btn-danger">ยกเลิก</button>
   </div>
-
+  </div>
 </ion-content>
