--- a/myApp/src/app/register/register.page.scss
+++ b/myApp/src/app/register/register.page.scss
@@ -55,25 +55,11 @@ ion-content {
   --box-shadow: none;
 }
 
-ion-item123 {
-  border-radius: 50px;
-  height: 55px;
-  box-shadow: 1px 8px 8px 0px rgba(0, 0, 0, 0.08);
-  --highlight-height: 0px;
-
-  ion-input {
-    font-size: 18px;
-    --padding-top: 20px;
-    --padding-bottom: 15px;
-    --padding-start: 5px;
-  }
-
-  a {
-    font-size: 17px;
-    letter-spacing: 0.5px;
-    text-decoration: none;
-  }
+.padding {
+  border-radius: 5px;
+  padding: 20px;
 }
+
 .background {
   --background: #f5f5f3;
 }
