--- a/myApp/src/app/components/notifications/notifications.component.html
+++ b/myApp/src/app/components/notifications/notifications.component.html
@@ -1,26 +1,26 @@
-<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300&display=swap" rel="stylesheet">
 <ion-list no-padding no-margin >
   <ion-list-header color="white">
-    <ion-label style="font-family: 'Sriracha', cursive;" class="fw700"><ion-icon name="notifications-circle-outline"></ion-icon> การแจ้งเตือน </ion-label>
+    <ion-label style="font-family: 'Sarabun', sans-serif;" class="fw700"><ion-icon name="notifications-circle-outline"></ion-icon> การแจ้งเตือน </ion-label>
   </ion-list-header>
 
   <ion-item color="light" class="text-10" (click)="messages()">
     <ion-icon name="mail-outline"></ion-icon>
-    <ion-label style="font-family: 'Sriracha', cursive;" > ชำระเงินจากคุณ วราวุฒิ</ion-label>
+    <ion-label style="font-family: 'Sarabun', sans-serif;" > ชำระเงินจากคุณ วราวุฒิ</ion-label>
   </ion-item>
 
   <ion-item color="light" class="text-10" (click)="messages()">
     <ion-icon name="mail-outline"></ion-icon>
-    <ion-label style="font-family: 'Sriracha', cursive;"> จองสนามจากคุณ วราวุฒิ</ion-label>
+    <ion-label style="font-family: 'Sarabun', sans-serif;"> จองสนามจากคุณ วราวุฒิ</ion-label>
   </ion-item>
 
   <ion-item color="light" class="text-10" (click)="messages()">
     <ion-icon name="mail-open-outline"></ion-icon>
-    <ion-label style="font-family: 'Sriracha', cursive;"> จองสนามจากคุณ สุระชัย</ion-label>
+    <ion-label style="font-family: 'Sarabun', sans-serif;"> จองสนามจากคุณ สุระชัย</ion-label>
   </ion-item>
 
   <ion-item color="light" class="text-10" (click)="messages()">
     <ion-icon name="mail-open-outline"></ion-icon>
-    <ion-label style="font-family: 'Sriracha', cursive;"> New Offer 35% OFF</ion-label>
+    <ion-label style="font-family: 'Sarabun', sans-serif;"> New Offer 35% OFF</ion-label>
   </ion-item>
 </ion-list>
