--- a/myApp/src/app/home/home.page.html
+++ b/myApp/src/app/home/home.page.html
@@ -1,5 +1,6 @@
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300&display=swap" rel="stylesheet">
 <ion-tabs>
-    <ion-tab-bar slot="bottom" style="font-family: 'Sriracha', cursive;">
+    <ion-tab-bar slot="bottom" style="font-family: 'Sarabun', sans-serif;">
         <ion-tab-button tab="myhome">
             <ion-icon name="home"></ion-icon>
             <ion-label>home</ion-label>
