--- a/myApp/src/app/partofpage/addfield/addfield.page.html
+++ b/myApp/src/app/partofpage/addfield/addfield.page.html
@@ -1,28 +1,29 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
-<ion-header class="background" style="font-family: 'Sriracha', cursive;">
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300&display=swap" rel="stylesheet">
+
+<ion-header class="background" style="font-family: 'Sarabun', sans-serif;">
   <ion-toolbar class="background">
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title>addfield</ion-title>
+    <ion-title>เพิ่มสนาม</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background" style="font-family: 'Sriracha', cursive;">
+<ion-content class="background" style="font-family: 'Sarabun', sans-serif;">
 
 
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/noimage.png" class="rounded" alt="...">
   </div>
 
-  <div>
-    <ion-button class="centeredit"(click)="selectImage()">เพิ่มรูปภาพใหม่</ion-button>
+  <div  class="centerbutton">
+    <button type="button" (click)="selectImage()" class="btn btn-link"><ion-icon name="camera-outline"></ion-icon>เพิ่มรูปภาพ</button>
   </div>
-
+  <div class="padding">
+  <label>ชื่อสนาม</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1">ชื่อสนาม</span>
     </div>
     <input type="text" class="form-control" [(ngModel)]="name_field" placeholder="ชื่อสนาม" aria-label="Username" aria-describedby="basic-addon1">
   </div>
@@ -54,10 +55,9 @@
       </option>
     </select>
   </div>
-
+  <label>ราคา</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon5">ราคา</span>
     </div>
     <input type="text" class="form-control" [(ngModel)]="price_field" placeholder="ราคา" aria-label="Username" aria-describedby="basic-addon1">
   </div>
@@ -71,6 +71,6 @@
 
   <div class="centerbutton">
     <button type="button" (click)="presentAlertConfirm()" class="btn btn-success ">เพิ่มสนาม</button>
-    <button type="button"  (click)="goAccount()" class="btn btn-danger">ยกเลิก</button>
+  </div>
   </div>
 </ion-content>
