--- a/myApp/src/app/partofpage/editstore/editstore.page.html
+++ b/myApp/src/app/partofpage/editstore/editstore.page.html
@@ -1,31 +1,34 @@
-<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
-<ion-header class="background" style="font-family: 'Sriracha', cursive;">
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<ion-header class="background" style="font-family: 'Sarabun', sans-serif;">
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title  style="font-family: 'Sriracha', cursive;">แก้ไขข้อมูลร้าน</ion-title>
+    <ion-title  style="font-family: 'Sarabun', sans-serif;">แก้ไขข้อมูลร้าน</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background" style="font-family: 'Sriracha', cursive;">
+<ion-content class="background" style="font-family: 'Sarabun', sans-serif;">
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/noimage.png" class="rounded" alt="...">
   </div>
 
-  <div>
-    <ion-button class="centeredit"(click)="selectImage()">แก้รูปภาพใหม่</ion-button>
+  <div  class="centerbutton">
+    <button type="button" (click)="selectImage()" class="btn btn-link"><ion-icon name="camera-outline"></ion-icon>เพิ่มรูปภาพ</button>
   </div>
+  <div class="padding">
+  <label>ชื่อร้าน</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1">ชื่อร้าน</span>
+
     </div>
     <input type="text" class="form-control" value="ร้าน ฟุตบอลหญ้าเทียมFootball" aria-label="Username" aria-describedby="basic-addon1">
   </div>
-
+  <label>ทึ่อยู่</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon5">ที่อยู่</span>
+
     </div>
     <div>
       <ion-item>
@@ -45,34 +48,22 @@
       </ion-item>
     </div>
   </div>
+  <label>เบอร์โทรศัพท์</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon6">เบอร์โทรศัพท์</span>
     </div>
     <input type="text" class="form-control" value="0951685495" aria-label="Username" aria-describedby="basic-addon1">
   </div>
+
+  <label>กฏของร้าน</label>
   <div class="input-group mb-3">
     <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon5">latitude</span>
     </div>
-    <input type="text" class="form-control" value="0.1561895151" aria-label="Username" aria-describedby="basic-addon1">
-  </div>
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon5">longitude</span>
-    </div>
-    <input type="text" class="form-control" value="0.15489548" aria-label="Username" aria-describedby="basic-addon1">
-  </div>
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon5">กฏของร้าน</span>
-    </div>
-    <input type="text" class="form-control" value="-" aria-label="Username" aria-describedby="basic-addon1">
+    <textarea class="form-control" value="กฏของร้าน"  aria-label="With textarea"></textarea>
   </div>
 
   <div class="centerbutton">
     <button type="button" (click)="presentAlertConfirm()" class="btn btn-success ">แก้ไขข้อมูลร้าน</button>
-    <button type="button"  (click)="goAccount()" class="btn btn-danger">ยกเลิก</button>
   </div>
-
+  </div>
 </ion-content>
